Fix spacing issue with login/admin/cart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,11 @@ form.button_to {
     text-transform: uppercase;
     font-style: italic;
   }
+
+  .navbar-right li{
+    margin-left: .5em;
+    margin-right: .5em;
+  }
 }
 
 .page-header {
